simple-nginx/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: simple-nginx-service
spec:
  selector:
    app: simple-nginx
  ports:
    - port: 80
      targetPort: 80
