simple-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-nginx-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: app-nginx.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-nginx-service
                port:
                  number: 80
